[package]
name = "adventofcode-2021"
version = "0.1.0"
authors = ["Jarkko Mourujarvi <jarkko@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "01-01"
path = "src/01/part1.rs"

[[bin]]
name = "01-02"
path = "src/01/part2.rs"

[[bin]]
name = "02-01"
path = "src/02/part1.rs"

[[bin]]
name = "02-02"
path = "src/02/part2.rs"

[[bin]]
name = "03-01"
path = "src/03/part1.rs"

[[bin]]
name = "03-02"
path = "src/03/part2.rs"
